[package]
name = "cairo-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["query"] }
itertools = "0.13.0"
anyhow = "1.0.82"
fern = "0.6.2"
log = "0.4.21"
http-body-util = "0.1.1"
indoc = "2.0.5"
base64 = "0.22.1"
zip = "2.1.3"

cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c", features = [ "instruments" ] }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }
hyle_contract = { git = "https://github.com/hyle-org/verifiers-for-hyle.git", branch = "main" }
num = "0.4.3"
hex = "0.4.3"
