[package]
name = "cairo-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c", features = [ "wasm" ] }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git", rev = "e465d7c" }
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", features= ['serde'] }
hyle_contract = { path = "../hyle-contract" }
serde_json = "1.0.111"
serde = "1.0.203"
wasm-bindgen = "0.2.92"
num = "0.4.3"
hex = "0.4.3"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"

tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.3", features = ["query"] }
itertools = "0.13.0"
anyhow = "1.0.82"
fern = "0.6.2"
log = "0.4.21"
http-body-util = "0.1.1"
indoc = "2.0.5"
base64 = "0.22.1"
zip = "2.1.3"
tower-http = { version = "0.5.2", features = ["cors"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[lib]
name = "cairo_verifier"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"] # cdylib for wasm

[[bin]]
name = "cairo-verifier"
path = "src/main.rs"

[[bin]]
name = "cairo-http"
path = "src/http/main.rs"
